--- a/src/app/mesages/mesages.component.html
+++ b/src/app/mesages/mesages.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="messageService.messages.length">
-
+<!-- test gitHub -->
   <h2>Messages</h2>
   <button class="clear"
           (click)="messageService.clear()">clear</button>
